# iOS-icon-extractor

./: .clang-tidy  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
include/: IconCenters.h  IconIO.h  config.h
include/iOS-icon-extractor/: IconCenters.hpp  IconIO.hpp  config.hpp
src/: IconIO.cpp  config.cpp  extract.cpp
